:sparkles: Add Shopping-car

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <header>
+    <img src="./images/carrito-de-compras.png" alt="carrito de compras" id="shopping-car">
+    <div class="badge">0</div>
+    <div id="products-added"></div>
+  </header>
   <section id="product-list">
   </section>
   <script type="text/javascript" src="./index.js"></script>
