add Shopping car remove

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="badge">0</div>
     <div id="products-added"></div>
   </header>
-  <section id="product-list">
-  </section>
+  <section id="product-list"></section>
   <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
