:sparkles::bug::bug::bug:

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <header>
     <img src="./images/carrito-de-compras.png" alt="carrito de compras" id="shopping-car">
     <div class="badge">0</div>
-    <div id="products-added"></div>
+    <div id="products-added">
+      <div class="list"></div>
+      <div id="btn-vaciar"></div>
+    </div>
   </header>
   <section id="product-list"></section>
   <script type="text/javascript" src="./index.js"></script>
